--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,9 @@ dependencies:
   image_picker: ^1.0.5
   flutter_localizations:
     sdk: flutter
+  firebase_core: ^2.24.2
+  firebase_auth: ^4.16.0
+  http: ^1.1.0
 
 dev_dependencies:
   flutter_test:
