--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nexus_fertility_app
+﻿name: nexus_fertility_app
 description: A new Flutter project.
 publish_to: 'none'
 version: 1.0.0+1
@@ -31,3 +31,12 @@ flutter:
 
 dependency_overrides:
   web: ^0.5.1
+
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/images/app_logo.png
+  android: true
+  ios: true
+  web: false
+  android_gravity: center
+  ios_content_mode: scaleAspectFit
