--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nexus_fertility_app
+﻿name: nexus_fertility_app
 description: A fertility tracking app for the Nexus team.
 publish_to: 'none'
 version: 1.0.0+1
@@ -10,13 +10,15 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.1
+  firebase_core: ^2.33.0
+  firebase_auth: ^4.17.0
   provider: ^6.1.1
   http: ^1.1.0
   shared_preferences: ^2.2.2
   flutter_localizations:
     sdk: flutter
+  sqflite: ^2.2.8
+  path_provider: ^2.0.15
   
   # === YOUR ADDITIONS ===
   local_auth: ^2.1.5
@@ -52,3 +54,5 @@ flutter:
   generate: true
   assets:
     - assets/images/
+
+
