--- a/l10n.yaml
+++ b/l10n.yaml
@@ -2,6 +2,6 @@
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
 output-class: AppLocalizations
-nullable-getter: false
-synthetic-package: false
-
+output-dir: lib/l10n
+untranslated-messages-file: untranslated_messages.json
+suppress-warnings: true
