--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -6,36 +6,57 @@ on:
   pull_request:
     branches: [ main ]
 
+env:
+  FLUTTER_VERSION: "3.19.0"
+
 jobs:
   build:
     runs-on: ubuntu-latest
-
-    steps:
-    - uses: actions/checkout@v4
     
-    - name: Set up Flutter
+    steps:
+    - name: Checkout code
+      uses: actions/checkout@v4
+    
+    - name: Setup Flutter
       uses: subosito/flutter-action@v2
       with:
-        channel: 'stable'
+        flutter-version: ${{ env.FLUTTER_VERSION }}
+        channel: stable
+        cache: true
+        cache-key: flutter-${{ env.FLUTTER_VERSION }}
     
-    - name: Install dependencies
+    - name: Show Flutter version
+      run: flutter --version
+    
+    - name: Get packages
       run: flutter pub get
     
     - name: Generate localizations
       run: flutter gen-l10n
     
+    - name: Verify localization files
+      run: |
+        echo "Checking generated files..."
+        if [ -f "lib/l10n/app_localizations.dart" ]; then
+          echo "✅ Localization files generated successfully"
+          ls -la lib/l10n/
+        else
+          echo "❌ Localization files not found"
+          exit 1
+        fi
+    
     - name: Analyze code
       run: flutter analyze
     
-    - name: Test
+    - name: Run tests
       run: flutter test
     
-    - name: Build web
-      run: flutter build web
+    - name: Build Android APK
+      run: flutter build apk --debug
     
-    - name: Upload build artifact
+    - name: Upload APK artifact
       uses: actions/upload-artifact@v4
+      if: success()
       with:
-        name: web-build
-        path: build/web/
-        retention-days: 7
+        name: debug-apk
+        path: build/app/outputs/flutter-apk/app-debug.apk
