--- a/l10n.yaml
+++ b/l10n.yaml
@@ -1,8 +1,13 @@
-arb-dir: lib/l10n
+﻿arb-dir: lib/l10n
 template-arb-file: app_en.arb
 output-localization-file: app_localizations.dart
-output-dir: lib/flutter_gen/gen_l10n
-
 output-class: AppLocalizations
-untranslated-messages-file: untranslated_messages_report.json
-
+output-dir: lib/l10n
+untranslated-messages-file: untranslated_messages.json
+suppress-warnings: true
+supported-locales:
+  - en
+  - ha
+  - ig  
+  - pcm
+  - yo
