--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: nexus_fertility_app
+﻿name: nexus_fertility_app
 description: A fertility tracking app for the Nexus team.
 publish_to: 'none'
 version: 1.0.0+1
@@ -10,8 +10,8 @@ dependencies:
   flutter:
     sdk: flutter
   cupertino_icons: ^1.0.2
-  firebase_core: ^2.24.2
-  firebase_auth: ^4.15.1
+  firebase_core: ^4.3.0
+  firebase_auth: ^6.1.3
   provider: ^6.1.1
   http: ^1.1.0
   shared_preferences: ^2.2.2
@@ -52,3 +52,4 @@ flutter:
   generate: true
   assets:
     - assets/images/
+
