EXACT FIX: Compatible Firebase versions (core 2.32.0, auth 4.20.0)

--- a/l10n.yaml
+++ b/l10n.yaml
@@ -5,3 +5,9 @@ output-class: AppLocalizations
 output-dir: lib/l10n
 untranslated-messages-file: untranslated_messages.json
 suppress-warnings: true
+supported-locales:
+  - en
+  - ha
+  - ig
+  - pcm
+  - yo
