--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,36 @@
 ﻿name: nexus_fertility_app
-publish_to: none
-version: 1.0.0
+description: A fertility tracking app
+publish_to: "none"
+version: 1.0.0+1
 
 environment:
-  sdk: ">=2.19.0 <4.0.0"
+  sdk: ">=3.10.0 <4.0.0"
 
 dependencies:
   flutter:
     sdk: flutter
+  table_calendar: ^3.0.9
+  intl: ^0.19.0
+
+dev_dependencies:
+  flutter_test:
+    sdk: flutter
+  flutter_launcher_icons: ^0.13.1
+  flutter_native_splash: ^2.3.8
+
+flutter_native_splash:
+  color: "#2E7D32"  # Changed to green
+  image: "assets/splash/ferti_splash.png"
+  android: true
+  ios: true
+
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/images/app_logo.png"
+  adaptive_icon_background: "#2E7D32"  # Changed to green
+  adaptive_icon_foreground: "assets/images/app_logo.png"
 
 flutter:
   uses-material-design: true
+  generate: true  # Added back to fix localization
