--- a/.github/workflows/flutter_ci.yml
+++ b/.github/workflows/flutter_ci.yml
@@ -1,23 +1,109 @@
-﻿name: Flutter CI
+﻿# Build Flutter APK for Android and iOS
 
+name: Flutter CI
 on:
-  push:
-    branches: [final-ci-fix]
-
+    push:
+        branches:
+            - main
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-      
-      - name: Setup Flutter
-        uses: subosito/flutter-action@v2
-        with:
-          flutter-version: '3.22.0'
-          
-      - name: Install dependencies
-        run: flutter pub get
-      
-      - name: Build Release APK
-        run: flutter build apk --release --dart-define=API_URL=${{ secrets.API_URL }}
+    android:
+        name: Build Android APK & Run Tests
+        runs-on: ubuntu-latest
+
+        env: 
+            API_URL: https://fertipath-backend.onrender.com
+            FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+        steps:
+            - name: Checkout code
+              uses: actions/checkout@v6
+
+            - name: Set up JDK 17 
+              uses: actions/setup-java@v5
+              with:
+                  distribution: 'temurin'
+                  java-version: '17'
+                  cache: 'gradle'
+# Build Android APK and app bundle
+            - name: Set up Flutter
+              uses: subosito/flutter-action@v2
+              with:
+                flutter-version: '3.38.0'
+                channel: 'stable'
+                cache: true
+
+            - name: Install dependencies
+              run: flutter pub get
+
+            - name: Generate localizations
+              run: flutter gen-l10n
+
+            - name: Run Flutter test 
+              run: flutter test --coverage || true
+
+            - name: Upload coverage artifact
+              uses: actions/upload-artifact@v4
+              with:
+                  name: coverage-android
+                  path: coverage/lcov.info
+
+            - name: Accept Android licenses
+              run: yes | flutter doctor --android-licenses
+
+            - name: Create Firebase credentials file
+              run: echo "$FIREBASE_CREDENTIALS" > firebase_credentials.json
+
+            - name: Build APK
+              run: flutter build apk --release --dart-define=API_URL=$API_URL 
+            - name: Upload APK artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: app-release-apk
+                path: build/app/outputs/flutter-apk/app-release.apk
+            - name: Build App Bundle
+              run: flutter build appbundle --release --dart-define=API_URL=$API_URL 
+            - name: Upload App Bundle artifact
+              uses: actions/upload-artifact@v4
+              with:
+                name: app-release-aab
+                path: build/app/outputs/bundle/release/app-release.aab
+
+# Build iOS app
+#    ios:
+#        name: Build iOS App & Run Tests
+#        runs-on: macos-latest
+#        env:
+#             API_URL: https://fertipath-backend.onrender.com
+#            FIREBASE_CREDENTIALS: ${{ secrets.FIREBASE_CREDENTIALS }}
+#        steps:
+#            - name: Checkout code
+#              uses: actions/checkout@v6
+#            - name: Set up Flutter
+#              uses: subosito/flutter-action@v2
+#              with:
+#                flutter-version: '3.38.0'
+#                channel: stable
+#            - name: Accept iOS licenses
+#              run: sudo xcodebuild -license accept || true
+
+#            - name: Create Firebase credentials file
+#              run: echo "$FIREBASE_CREDENTIALS" > firebase_credentials.json
+#            - name: Install dependencies
+#              run: flutter pub get
+
+#            - name: Run Flutter tests
+#              run: flutter test --coverage || true
+
+#            - name: Upload coverage artifact
+#              uses: actions/upload-artifact@v4
+#              with:
+#                name: coverage-ios
+#                path: coverage/lcov.info
+#            - name: Build iOS app
+#              run: flutter build ios --release --no-codesign --dart-define=API_URL=$API_URL 
+#            - name: Upload iOS app artifact
+#              uses: actions/upload-artifact@v4
+#              with:
+#                name: ios-app
+#                path: build/ios/iphoneos/Runner.app
+
+
