--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -4,10 +4,12 @@ publish_to: "none"
 version: 1.0.0+1
 
 environment:
-  sdk: ">=3.10.0 <4.0.0"
+  sdk: ">=3.0.0 <4.0.0"
 
 dependencies:
   flutter:
+    sdk: flutter
+  flutter_localizations:
     sdk: flutter
   table_calendar: ^3.0.9
   intl: ^0.19.0
