--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,10 @@ dependencies:
     sdk: flutter
   flutter_localizations:
     sdk: flutter
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
+  http: ^1.1.2
+  audioplayers: ^5.2.1
   table_calendar: ^3.0.9
   intl: ^0.20.2
 
