--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   audioplayers: ^5.2.1
   table_calendar: ^3.0.9
   intl: ^0.20.2
+  flutter_gen: ^5.4.0
 
 dev_dependencies:
   flutter_test:
