--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,7 @@ dependencies:
   table_calendar: ^3.0.9
   intl: ^0.20.2
   flutter_gen: ^5.4.0
+  email_validator: ^2.1.17
 
 dev_dependencies:
   flutter_test:
